# feedly-mcp-server

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/feedly_mcp/: __init__.py  client.py  constants.py  models.py  server.py
